Enable multiple pictures upload

--- a/photo-showdown-frontend/src/app/pictures/components/pictures-page/pictures-page.component.css
+++ b/photo-showdown-frontend/src/app/pictures/components/pictures-page/pictures-page.component.css
@@ -1,18 +1,10 @@
-.form {
-  min-width: 250px;
-  max-width: 250px;
-  min-height: 50px;
-  height: 100%;
-}
-
 mat-card {
   margin: auto;
   width: 50%;
   margin-top: 2%;
-}
-
-.file-button {
-  padding-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .upload-container {
@@ -23,4 +15,7 @@ mat-card {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: 250px;
+  max-width: 250px;
+  min-height: 50px;
 }
