--- a/photo-showdown-frontend/src/app/matches/components/match-list/match-list.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/match-list/match-list.component.html
@@ -13,7 +13,7 @@
     <app-match-list-item
       *ngFor="let match of this.matches"
       [match]="match"
-      (onJoinMatch)="matchJoined($event)"
+      (matchJoined)="OnMatchJoined($event)"
     ></app-match-list-item>
   </mat-card-content>
 </mat-card>
