--- a/photo-showdown-frontend/src/app/pictures/components/pictures-page/pictures-page.component.html
+++ b/photo-showdown-frontend/src/app/pictures/components/pictures-page/pictures-page.component.html
@@ -23,7 +23,7 @@
       mat-raised-button
       color="warn"
       (click)="cancelUpload()"
-      [disabled]="this.picturesToUpload == undefined"
+      [hidden]="this.picturesToUpload == undefined"
     >
       Cancel
     </button>
