Max Number of Rounds tracked correctly in match settings

--- a/photo-showdown-frontend/src/app/matches/components/pre-match-lobby/pre-match-lobby.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/pre-match-lobby/pre-match-lobby.component.html
@@ -125,6 +125,7 @@
               name="numOfRounds"
               #numOfRounds="ngModel"
               ngModel
+              [(ngModel)]="matchSettings.numOfRounds"
             />
             <mat-error
               *ngIf="
