move picture border if selected/voted/won/disabled to picture item component

--- a/photo-showdown-frontend/src/app/matches/components/in-match-picture-selection/in-match-picture-selection.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match-picture-selection/in-match-picture-selection.component.html
@@ -4,7 +4,7 @@
     [picture]="picture"
     class="grid-item"
     (click)="selectPicture(picture)"
-    [class.selected-picture]="picture.id === selectedPictureId"
+    [selected]="picture.id === selectedPictureId"
   ></app-picture-item>
 </div>
 <button
