--- a/photo-showdown-frontend/src/app/matches/components/in-match-vote-picture/in-match-vote-picture.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match-vote-picture/in-match-vote-picture.component.html
@@ -1,5 +1,5 @@
 <div class="pictures-grid">
-  <div *ngFor="let selectedPicture of picturesToVote" >
+  <div *ngFor="let selectedPicture of picturesToVote">
     <p
       class="picture-info"
       *ngIf="currentRound?.roundState === RoundStates.ended"
@@ -10,14 +10,17 @@
       <strong>Votes: {{ selectedPicture.numOfVotes }}</strong>
     </p>
     <app-picture-item
-    class="grid-item"
+      class="grid-item"
       [picture]="selectedPicture"
       (click)="selectPicture(selectedPicture)"
-      [class.voted-picture]="selectedPicture.id === votedPictureId"
-      [class.disabled-picture]="userPictureIds.has(selectedPicture.pictureId)"
-      [class.winning-picture]="
+      [voted]="selectedPicture.id === votedPictureId"
+      [winning]="
         currentRound.roundWinner != undefined &&
         selectedPicture.selectedByUser?.id === currentRound.roundWinner.id
+      "
+      [disabled]="
+        currentRound?.roundState !== RoundStates.ended &&
+        userPictureIds.has(selectedPicture.pictureId)
       "
     ></app-picture-item>
   </div>
