--- a/photo-showdown-frontend/src/app/matches/components/pre-match-lobby/pre-match-lobby.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/pre-match-lobby/pre-match-lobby.component.html
@@ -95,6 +95,7 @@
         <div class="form-group">
           <mat-form-field>
             <label for="numOfVotesToWin">Number of Votes to Win</label>
+            (this doesn't work)
             <input
               type="number"
               id="numOfVotesToWin"
