--- a/photo-showdown-frontend/src/app/pictures/components/picture-item/picture-item.component.html
+++ b/photo-showdown-frontend/src/app/pictures/components/picture-item/picture-item.component.html
@@ -1,3 +1,9 @@
-<div class="image-container">
+<div
+  class="image-container"
+  [class.selected-picture]="selected"
+  [class.voted-picture]="voted"
+  [class.winning-picture]="winning"
+  [class.disabled-picture]="disabled"
+>
   <img [src]="picture.picturePath" [alt]="picture.id" class="image" />
 </div>
