Extract in match pictures grid component

--- a/photo-showdown-frontend/src/app/matches/components/in-match-vote-picture/in-match-vote-picture.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match-vote-picture/in-match-vote-picture.component.html
@@ -1,4 +1,4 @@
-<div class="pictures-grid">
+<app-in-match-pictures-grid>
   <div *ngFor="let selectedPicture of picturesToVote">
     <p
       class="picture-info"
@@ -24,7 +24,7 @@
       "
     ></app-picture-item>
   </div>
-</div>
+</app-in-match-pictures-grid>
 <button
   class="lock-in-button"
   mat-raised-button
