--- a/photo-showdown-frontend/src/app/matches/components/in-match-picture-selection/in-match-picture-selection.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match-picture-selection/in-match-picture-selection.component.html
@@ -1,4 +1,4 @@
-<div class="pictures-grid">
+<app-in-match-pictures-grid>
   <app-picture-item
     *ngFor="let picture of pictures"
     [picture]="picture"
@@ -6,9 +6,9 @@
     (click)="selectPicture(picture)"
     [selected]="picture.id === selectedPictureId"
   ></app-picture-item>
-</div>
+</app-in-match-pictures-grid>
 <button
-class="lock-in-button"
+  class="lock-in-button"
   mat-raised-button
   color="primary"
   [disabled]="!selectedPictureId || lockedIn"
