Redsign in match page with gride and info in aside

--- a/photo-showdown-frontend/src/app/matches/components/in-match-vote-picture/in-match-vote-picture.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match-vote-picture/in-match-vote-picture.component.html
@@ -19,7 +19,7 @@
         selectedPicture.selectedByUser?.id === currentRound.roundWinner.id
       "
       [disabled]="
-        currentRound?.roundState !== RoundStates.ended &&
+        currentRound.roundState !== RoundStates.ended &&
         userPictureIds.has(selectedPicture.pictureId)
       "
     ></app-picture-item>
