--- a/photo-showdown-frontend/src/app/matches/components/in-match/in-match.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match/in-match.component.html
@@ -1,5 +1,4 @@
 <div class="in-match-container">
-
   <div class="sentence-container">
     <mat-card class="sentence-card">
       <h2>
@@ -8,7 +7,7 @@
     </mat-card>
   </div>
 
-  <!-- Round Info Headerish thingy -->
+  <!-- Round Info Aside thingy -->
   <div class="round-info-container">
     <!-- Round Details -->
     <mat-card class="round-details">
@@ -35,12 +34,16 @@
       <ul>
         <li *ngFor="let player of this.match?.users">
           <p>
-            <strong>{{ player.username }}: </strong> Score:
-            {{ score.get(player.id) }}
+            <strong>{{ player.username }}: </strong>
+            Score: {{ score.get(player.id) }}
+            <mat-checkbox
+              [checked]="lockedInUserIds.has(player.id)"
+              color="primary"
+              disabled
+            ></mat-checkbox>
           </p>
-        </li>
-      </ul></mat-card
-    >
+        </li></ul
+    ></mat-card>
   </div>
 
   <!-- Picture Selection or Voting -->
@@ -52,6 +55,7 @@
       "
       [pictures]="this.usersPictures"
       [currentRound]="this.currentRound"
+      (lockedInPicture)="onLockedInPicture()"
     ></app-in-match-picture-selection>
 
     <app-in-match-vote-picture
@@ -63,6 +67,7 @@
       [picturesToVote]="this.currentRound!.picturesSelected"
       [userPictureIds]="this.userPictureIds"
       [currentRound]="this.currentRound"
+      (lockedInPicture)="onLockedInPicture()"
     ></app-in-match-vote-picture>
   </div>
 </div>
