in-match html comments

--- a/photo-showdown-frontend/src/app/matches/components/in-match/in-match.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match/in-match.component.html
@@ -46,8 +46,9 @@
     ></mat-card>
   </div>
 
-  <!-- Picture Selection or Voting -->
+  <!-- Match Pictures screen (selection / voting) -->
   <div>
+    <!-- Picture Selection -->
     <app-in-match-picture-selection
       *ngIf="
         match?.currentRound?.roundState === RoundStates.pictureSelection &&
@@ -58,6 +59,7 @@
       (lockedInPicture)="onLockedInPicture()"
     ></app-in-match-picture-selection>
 
+    <!-- Picture Voting -->
     <app-in-match-vote-picture
       *ngIf="
         (match?.currentRound?.roundState === RoundStates.voting ||
