--- a/photo-showdown-frontend/src/app/matches/components/in-match-summary-screen/in-match-summary-screen.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match-summary-screen/in-match-summary-screen.component.html
@@ -1,5 +1,5 @@
 
 <mat-card class="winner">
-<p>THE WINNER IS: {{winner.toUpperCase()}}</p>
+<p>THE WINNER IS: {{winnerUsername}}</p>
 </mat-card>
 
