Integrate match socket service

--- a/photo-showdown-frontend/src/app/matches/components/in-match-vote-picture/in-match-vote-picture.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match-vote-picture/in-match-vote-picture.component.html
@@ -1,7 +1,7 @@
 <app-in-match-pictures-grid>
 	<div *ngFor="let selectedPicture of picturesToVote">
 		<p class="picture-info" *ngIf="currentRound?.roundState === RoundStates.ended">
-			<strong>Selected By: {{ selectedPicture.selectedByUser!.username }}</strong>
+			<strong>Selected By: {{ selectedPicture.selectedByUser?.username }}</strong>
 			<strong>Votes: {{ selectedPicture.numOfVotes }}</strong>
 		</p>
 		<app-picture-item
